# vendia-utils

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml
src/vendia_utils/: actions.py  blocks.py
tests/: test_blocks.py
vendia/: __init__.py  blocks.py
