[metadata]
name = vendia-utils
url = https://github.com/brian-vendia/vendia-utils
license = Apache
description = Utilies to work with Vendia services
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.8
packages = find:
zip_safe = true
install_requires =
    gql[requests]==3.0.0a5
    graphql-core==3.1.6
    requests==2.26.0 

[options.packages.find]
exclude = tests
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist .venv
testpaths = tests src/vendia_utils
addopts = --cov=src/vendia_utils --cov-report=html


[tool:black]
line-length = 120
target-version = ['py38']
